my-apps/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-stg
    cert-manager.io/common-name: vault.isandeshsol.com
spec:
  ingressClassName: traefik
  rules:
    - host: vault.isandeshsol.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
  # Uncomment this block if using TLS
  tls:
    - hosts:
        - vault.isandeshsol.com
      secretName: vault-tls
